# unipka

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  example.ipynb  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: ensemble_drugbank.py  kpuu.csv  kpuu.py  logd.py  pka.py  sampl6.py  solvation.py
src/unipka/: __init__.py  assets.py  unipka.py
src/unipka/_internal/: conformer.py  coordinates.py  dataset.py  dict.py  draw.py  solvation.py  tautomers.py  template.py  temporal_activity.py  widget.py
src/unipka/_internal/model/: transformer.py  unimol.py  utils.py
src/unipka/data/: weights.kpuu.npz
tests/: test_coordinates.py  test_unipka.py
